compositor: crash on using the viewer node inside of group nodes #40986

Closed
opened 2014-07-08 00:24:49 +02:00 by Sir Torx Screwdriver · 10 comments

System Information
Windows 8.1 Pro

Blender Version
Broken: latest official 2.71 build hash 9337574 2014-06-25 18:36

Short description of error
adding a viewer node inside of node groups either by ctrl-shift clicking a node or select it via add>[...]causes random crashes.
I've managed to build a simple file to reproduce the issue

Exact steps for others to reproduce the error
here's a simple file

group_nodes_viewer_node_crashes1.blend

[provided you have "load UI" enabled you should get an image editor and a compositor screen]

render the scene (just a cube not even any lighting takes just a second or two :) ) ; the crash only seems to appear whenever the image has been rendered previously.

select the node group in the middle, hit tab to get into it.

now ctrl+shift clicking on any one of the three nodes instantly crashes blender over here.

Hope you can easily reproduce this thing
Thanks!

**System Information** Windows 8.1 Pro **Blender Version** Broken: latest official 2.71 build hash 9337574 2014-06-25 18:36 **Short description of error** adding a viewer node inside of node groups either by ctrl-shift clicking a node or select it via add>[...]causes random crashes. I've managed to build a simple file to reproduce the issue **Exact steps for others to reproduce the error** here's a simple file [group_nodes_viewer_node_crashes1.blend](https://archive.blender.org/developer/F97027/group_nodes_viewer_node_crashes1.blend) [provided you have "load UI" enabled you should get an image editor and a compositor screen] render the scene (just a cube not even any lighting takes just a second or two :) ) ; the crash only seems to appear whenever the image has been rendered previously. select the node group in the middle, hit tab to get into it. now ctrl+shift clicking on any one of the three nodes instantly crashes blender over here. Hope you can easily reproduce this thing Thanks!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @particleemitter

Added subscriber: @particleemitter

""the crash only seems to appear whenever the image has been rendered previously.""
sorry I got that wrong!
There seems to be no need to render the image first. That doesn't seem to make any difference. sorry for any confusion if you read this after reading the original comment

""the crash only seems to appear whenever the image has been rendered previously."" sorry I got that wrong! There seems to be no need to render the image first. That doesn't seem to make any difference. sorry for any confusion if you read this after reading the original comment

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

I'm getting:

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffcac99700 (LWP 5990)]
ScaleOperation::executePixelSampled (
    this=<error reading variable: Cannot access memory at address 0xffffffffffffffb8>, 
    this@entry=<error reading variable: Cannot access memory at address 0x8>, 
    output=<error reading variable: Cannot access memory at address 0xffffffffffffffb0>, 
    output@entry=<error reading variable: Cannot access memory at address 0x8>, x=<error reading variable: Cannot access memory at address 0xffffffffffffffac>, x@entry=<error reading variable: Cannot access memory at address 0x8>, 
    y=<error reading variable: Cannot access memory at address 0xffffffffffffffa8>, y@entry=<error reading variable: Cannot access memory at address 0x8>, 
    sampler=<error reading variable: Cannot access memory at address 0xffffffffffffffa4>, 
    sampler@entry=<error reading variable: Cannot access memory at address 0x8>) at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_ScaleOperation.cpp:85

85 }

But I can't seem to get a useful backtrace from gdb.

I'm getting: ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffcac99700 (LWP 5990)] ScaleOperation::executePixelSampled ( this=<error reading variable: Cannot access memory at address 0xffffffffffffffb8>, this@entry=<error reading variable: Cannot access memory at address 0x8>, output=<error reading variable: Cannot access memory at address 0xffffffffffffffb0>, output@entry=<error reading variable: Cannot access memory at address 0x8>, x=<error reading variable: Cannot access memory at address 0xffffffffffffffac>, x@entry=<error reading variable: Cannot access memory at address 0x8>, y=<error reading variable: Cannot access memory at address 0xffffffffffffffa8>, y@entry=<error reading variable: Cannot access memory at address 0x8>, sampler=<error reading variable: Cannot access memory at address 0xffffffffffffffa4>, sampler@entry=<error reading variable: Cannot access memory at address 0x8>) at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_ScaleOperation.cpp:85 ``` 85 } But I can't seem to get a useful backtrace from gdb.

Here's another try:

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffc7874700 (LWP 6240)]

0x00000000024282e9 in MixGlareOperation::executePixelSampled (this=0x7fffd00058b0, output=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST)

    at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_MixOperation.cpp:473

473 output- [x] = mf * max(inputColor1- [x] + value * (inputColor2- [x] - inputColor1- [x]), 0.0f);

(gdb) bt

#0 0x00000000024282e9 in MixGlareOperation::executePixelSampled (this=0x7fffd00058b0, output=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST)

    at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_MixOperation.cpp:473
  • 1 0x00000000023f9a45 in SocketReader::readSampled (this=0x7fffd00058b0, result=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_SocketReader.h:95
  • 2 0x0000000002420c96 in ViewerOperation::executeRegion (this=0x7fffd0007ae0, rect=0x7fffc7873de0, tileNumber=13) at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_ViewerOperation.cpp:103
  • 3 0x00000000023eec37 in CPUDevice::execute (this=0x7fffd0001210, work=0x7fffd000a870) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_CPUDevice.cpp:33
  • 4 0x00000000023ec1c0 in WorkScheduler::thread_execute_cpu (data=0x7fffd0001210) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_WorkScheduler.cpp:159
  • 5 0x00000000027b115b in tslot_thread_start (tslot_p=0x7fffd0008788) at /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:251
  • 6 0x00007ffff63ce182 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
    #7 0x00007ffff359d30d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Here's another try: ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffc7874700 (LWP 6240)] ``` 0x00000000024282e9 in MixGlareOperation::executePixelSampled (this=0x7fffd00058b0, output=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST) ``` at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_MixOperation.cpp:473 ``` 473 output- [x] = mf * max(inputColor1- [x] + value * (inputColor2- [x] - inputColor1- [x]), 0.0f); ``` (gdb) bt ``` #0 0x00000000024282e9 in MixGlareOperation::executePixelSampled (this=0x7fffd00058b0, output=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST) ``` at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_MixOperation.cpp:473 ``` - 1 0x00000000023f9a45 in SocketReader::readSampled (this=0x7fffd00058b0, result=0x7fffcac99ff8, x=1022, y=620, sampler=COM_PS_NEAREST) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_SocketReader.h:95 - 2 0x0000000002420c96 in ViewerOperation::executeRegion (this=0x7fffd0007ae0, rect=0x7fffc7873de0, tileNumber=13) at /home/kevin/src/blender-git/blender/source/blender/compositor/operations/COM_ViewerOperation.cpp:103 - 3 0x00000000023eec37 in CPUDevice::execute (this=0x7fffd0001210, work=0x7fffd000a870) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_CPUDevice.cpp:33 - 4 0x00000000023ec1c0 in WorkScheduler::thread_execute_cpu (data=0x7fffd0001210) at /home/kevin/src/blender-git/blender/source/blender/compositor/intern/COM_WorkScheduler.cpp:159 - 5 0x00000000027b115b in tslot_thread_start (tslot_p=0x7fffd0008788) at /home/kevin/src/blender-git/blender/source/blender/blenlib/intern/threads.c:251 - 6 0x00007ffff63ce182 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0 #7 0x00007ffff359d30d in clone () from /lib/x86_64-linux-gnu/libc.so.6 ``` ```
Lukas Tönne self-assigned this 2014-07-08 11:38:19 +02:00
Member

Own mistake caused by this fix: 78efff5

This will cause simultaneous viewers in the top-level tree and group fight each other for the viewer image and cause a race condition ... Have to revise the way the "active viewer" is defined.

Own mistake caused by this fix: 78efff5 This will cause simultaneous viewers in the top-level tree and group fight each other for the viewer image and cause a race condition ... Have to revise the way the "active viewer" is defined.

This issue was referenced by a5902fb276

This issue was referenced by a5902fb276933278bd8db86a9b1938fe649662d8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a5902fb276.

Closed by commit a5902fb276.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40986
No description provided.