source/blender/compositor/intern/COM_NodeConverter.h
@@ -34,6 +34,8 @@ class NodeOperationInput;
 class NodeOperationOutput;
 class NodeOperationBuilder;
 
+class ViewerOperation;
+
 /** Interface type for converting a \a Node into \a NodeOperation.
  *  This is passed to \a Node::convertToOperation methods and allows them
  *  to register any number of operations, create links between them,
@@ -101,6 +103,11 @@ public:
 	 *  @note missing image / group pointer, or missing renderlayer from EXR
 	 */
 	NodeOperation *setInvalidOutput(NodeOutput *output);
+	
+	/** Define a viewer operation as the active output, if possible */
+	void registerViewer(ViewerOperation *viewer);
+	/** The currently active viewer output operation */
+	ViewerOperation *active_viewer() const;
 	
 private:
 	/** The internal builder for storing the results of the graph construction. */
