source/blender/compositor/intern/COM_NodeGraph.cpp
@@ -101,8 +101,7 @@ void NodeGraph::add_bNodeTree(const CompositorContext &context, int nodes_start,
 	const bNodeTree *basetree = context.getbNodeTree();
 	
 	/* update viewers in the active edittree as well the base tree (for backdrop) */
-	bool is_active_group = ((parent_key.value == basetree->active_viewer_key.value) ||
-	                        (tree == basetree));
+	bool is_active_group = (parent_key.value == basetree->active_viewer_key.value);
 	
 	/* add all nodes of the tree to the node list */
 	for (bNode *node = (bNode *)tree->nodes.first; node; node = node->next) {
